Fix initialization of the internal painter of the Sketch PaintOp

The painter was not initialized with the paint color before the first
iteration of the loop. That meant the first segment of the connecting
line was painted with a random color.

BUG:316858